scripts/nullaway/original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8.txt
../original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/demo/gui/DemoGameView.java:47: error: [NullAway] initializer method does not guarantee @NonNull fields mainWindow (line 37), buttonPanel (line 38), mapLabel (line 39), infoPanel (line 40), performActionButton (line 41), gameStateInfoLabel (line 42), misterXInfoLabel (line 43), winnerInfoLabel (line 45) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DemoGameView(Game game, DemoGameController controller) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/model/game/helpers/PositionChecker.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null; //Im Detective-Type Enum einen default, der hier zurückgegeben wird, wenn mister x noch nicht gefunden
		^
    (see http://t.uber.com/nullaway )
../original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/model/mapparser/MapData.java:14: error: [NullAway] initializer method does not guarantee @NonNull fields cities (line 11), connections (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MapData() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/demo/shell/ShellDemo.java:15: error: [NullAway] @NonNull field gameCycleSimplifier not initialized
	private GameCycleSimplifier gameCycleSimplifier;
	                            ^
    (see http://t.uber.com/nullaway )
../original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/model/game/GameImpl.java:27: error: [NullAway] @NonNull static field instance not initialized
  private static Game instance;
                      ^
    (see http://t.uber.com/nullaway )
../original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/model/factory/GameItemFactoryImpl.java:25: error: [NullAway] @NonNull static field instance not initialized
	private static GameItemFactory instance;
	                               ^
    (see http://t.uber.com/nullaway )
../original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/model/gameitems/impl/MapImpl.java:23: error: [NullAway] initializer method does not guarantee @NonNull field mapDataParser (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MapImpl() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/model/gameitems/decorators/CachedCity.java:17: error: [NullAway] initializer method does not guarantee @NonNull field cachedConnections (line 14) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public CachedCity(City city) {
	       ^
    (see http://t.uber.com/nullaway )
8 errors
